--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -7,35 +7,96 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+<style>
+    .table-container {
+        padding: 15px 20px;
+    }
+
+    .title {
+        font-size: 25px;
+        font-weight: 600;
+        padding-bottom: 10px;
+    }
+
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    th,
+    td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+
+    tr:hover {
+        background-color: #ccc;
+    }
+</style>
+</head>
 
 <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="/">Home</a>
+        <a href="/create-user">Create User</a>
     </div>
-    <div class="form-add-new">
-        <fieldset>
-            <legend>Form add new user</legend>
-            <div class="input-group">
-                <label>Email : </label>
-                <input type="text">
-            </div>
-            <div class="input-group">
-                <label>Name : </label>
-                <input type="text">
-            </div>
-            <div class="input-group">
-                <label>City : </label>
-                <input type="text">
-            </div>
-            <div>
-                <button class="save">Save</button>
-            </div>
-        </fieldset>
+    <div class="table-container">
+        <div class="title">List User</div>
+    </div>
 
-    </div>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Email</th>
+            <th>Name</th>
+            <th>City</th>
+            <th>Action</th>
+        </tr>
+        <!-- Dùng for duyệt: -->
+        <!-- <% for (let i=0; i < listUser.length; i++) { %>
+
+            <tr>
+                <td>
+                    <%= listUser[i].id %>
+                </td>
+                <td>
+                    <%= listUser[i].email %>
+                </td>
+                <td>
+                    <%= listUser[i].name %>
+                </td>
+                <td>
+                    <%= listUser[i].city %>
+                </td>
+            </tr>
+            <% } %> -->
+
+
+        <!-- Dùng forEach duyệt: -->
+        <% listUser.forEach(function(user) { %>
+            <tr>
+                <td>
+                    <%= user.id %>
+                </td>
+                <td>
+                    <%= user.email %>
+                </td>
+                <td>
+                    <%= user.name %>
+                </td>
+                <td>
+                    <%= user.city %>
+                </td>
+                <td>
+                    <a href="/update/<%= user.id %>"><button>Edit</button></a>
+                    <a href="/delete/<%= user.id %>"><button>Delete</button></a>
+                </td>
+            </tr>
+            <% }) %>
+
+    </table>
+
 </body>
 
 </html>
